force-app/main/default/objects/BusinessAccount/fields/Account_Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Assignment_Group__c</fullName>
    <label>Account Assignment Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>01 - Domestic Revenues</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02 - Foreign Revenues</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03 - Affiliat Comp Revenu</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <label>P1 - PY - Serviço Buffet</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <label>P2 - PY - Serviço Limpiez</label>
            </value>
            <value>
                <fullName>P3</fullName>
                <label>P3 - PY - Enfermería</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>Z1 - Mosaic Domestic Rev</label>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>Z2 - Mosaic Foreign Rev</label>
            </value>
            <value>
                <fullName>Z3</fullName>
                <label>Z3 - Mosaic Inter-Company</label>
            </value>
            <value>
                <fullName>Z4</fullName>
                <label>Z4 - Cargill Domestic</label>
            </value>
            <value>
                <fullName>Z6</fullName>
                <label>Z6 - Mosaic Affl Domestic</label>
            </value>
            <value>
                <fullName>Z7</fullName>
                <label>Z7 - Mosaic Affl Foreign</label>
            </value>
            <value>
                <fullName>Z8</fullName>
                <label>Z8 - CargillAffl Domestic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>