force-app/main/default/objects/BusinessAccount/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account Manager)</relationshipLabel>
    <relationshipName>AccountManager</relationshipName>
    <type>Lookup</type>
</CustomField>