force-app/main/default/objects/BusinessAccount/fields/Bill_to_partner_related__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_partner_related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-to partner related</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Bill-to partner related)</relationshipLabel>
    <relationshipName>BilltoPartner</relationshipName>
    <type>Lookup</type>
</CustomField>