force-app/main/default/objects/BusinessAccount/fields/Cust_Serv_Rep_Account__c.field-meta.xml
<CustomField>
    <fullName>Cust_Serv_Rep_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cust Serv Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Other</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Cust Serv Rep)</relationshipLabel>
    <relationshipName>CustServRep</relationshipName>
    <type>Lookup</type>
</CustomField>