force-app/main/default/objects/BusinessAccount/fields/Customer_buys_via_intercompany_VCO__c.field-meta.xml
<CustomField>
    <fullName>Customer_buys_via_intercompany_VCO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer buys via intercompany VCO?</label>
    <type>Checkbox</type>
</CustomField>