force-app/main/default/objects/BusinessAccount/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <description>.</description>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>01 - Industry</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02 - Canal - Basic / Grow</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03 - Dealers</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04 - Commissioner</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05 - Customer Group 05</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>06 - Exports</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>07 - Direct Sale</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>08 - Sale Retail</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>09 - Elevator</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - Store e-Commerce</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - Other Accounts</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 - Buying Group</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 - Co-operative</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 - Livestock Farmer</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 - EU - KAM Mega Farmer</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16 - Blender</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17 - EU -Farmer/Mid/Small</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18 - Farmer cof/citr/pere</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19 - EU - Mega Farmer</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21 - Premix Industry</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22 - Supplement Industry</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23 - Independent Farm</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>24 - Coop w/o Integration</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>25 - Distributor</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>26 - Long Tail</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>27 - Key Account</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>28 - Promissors</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>29 - Standard</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 - EU - Top Farmer</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>31 - Canal - Prime</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>