force-app/main/default/objects/BusinessAccount/fields/Domestic_Broker_2__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Broker_2__c</fullName>
    <inlineHelpText>Inform only numbers with maximum 7 characters</inlineHelpText>
    <label>Domestic Broker 2</label>
    <length>7</length>
    <type>Text</type>
</CustomField>