force-app/main/default/objects/BusinessAccount/fields/Domestic_Broker_account__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Broker_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domestic Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Domestic Broker)</relationshipLabel>
    <relationshipName>DomesticBroker</relationshipName>
    <type>Lookup</type>
</CustomField>