force-app/main/default/objects/BusinessAccount/fields/EvergageAction_Click_Register_Today__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Click_Register_Today__c</fullName>
    <description>Uses of action &apos;Click Register Today&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Click Register&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>