force-app/main/default/objects/BusinessAccount/fields/EvergageAction_Homepage__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_Homepage__c</fullName>
    <description>Uses of action &apos;Homepage&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Homepage&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>