force-app/main/default/objects/BusinessAccount/fields/EvergageAction_View_ACN_Insights_Page__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_View_ACN_Insights_Page__c</fullName>
    <description>Uses of action &apos;View ACN Insights Page&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;View ACN Insig&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>