force-app/main/default/objects/BusinessAccount/fields/EvergageAction_View_Microessentials_R__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_View_Microessentials_R__c</fullName>
    <description>Uses of action &apos;View Microessentials ROI Calculator&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;View Microesse&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>