force-app/main/default/objects/BusinessAccount/fields/EvergageAction_View_Nutrient_Removal__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_View_Nutrient_Removal__c</fullName>
    <description>Uses of action &apos;View Nutrient Removal Calculator&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;View Nutrient &apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>