force-app/main/default/objects/BusinessAccount/fields/EvergageAction_View_Product_Page__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_View_Product_Page__c</fullName>
    <description>Uses of action &apos;View Product Page&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;View Product P&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>