force-app/main/default/objects/BusinessAccount/fields/EvergageAction_View_Speak_With_a_Rep__c.field-meta.xml
<CustomField>
    <fullName>EvergageAction_View_Speak_With_a_Rep__c</fullName>
    <description>Uses of action &apos;View Speak With a Rep page&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;View Speak Wit&apos;</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>