force-app/main/default/objects/BusinessAccount/fields/Payer_partner_related__c.field-meta.xml
<CustomField>
    <fullName>Payer_partner_related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer partner related</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Payer partner related)</relationshipLabel>
    <relationshipName>PayerPartner</relationshipName>
    <type>Lookup</type>
</CustomField>