force-app/main/default/objects/BusinessAccount/fields/PMC_CLM_LegalHoldStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_LegalHoldStatus__c</fullName>
    <label>Legal Hold Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Hold Inactive</fullName>
                <default>true</default>
                <label>Legal Hold Inactive</label>
            </value>
            <value>
                <fullName>Legal Hold Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>