force-app/main/default/objects/BusinessAccount/fields/PMC_CLM_LegalHoldStatusReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_LegalHoldStatusReason__c</fullName>
    <description>This field is used to store the reason for Legal hold activation and deactivation on an account.</description>
    <label>Legal Hold Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>