force-app/main/default/objects/BusinessAccount/fields/PMC_CPQ_Region__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_Region</valueSetName>
    </valueSet>
</CustomField>