force-app/main/default/objects/BusinessAccount/fields/PMC_CPQ_SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesOffice__c</fullName>
    <label>Sales Office (deprecated)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_SalesOffice</valueSetName>
    </valueSet>
</CustomField>