force-app/main/default/objects/BusinessAccount/fields/PMC_DH_Delivery_Instruction__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Delivery_Instruction__c</fullName>
    <label>Delivery Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>