force-app/main/default/objects/BusinessAccount/fields/PMC_DH_StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_StreetNumber__c</fullName>
    <description>This is a street number field and it is OPTIONAL</description>
    <label>Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>