force-app/main/default/objects/BusinessAccount/fields/PMC_Is_Retailer__c.field-meta.xml
<CustomField>
    <fullName>PMC_Is_Retailer__c</fullName>
    <formula>RecordType.DeveloperName = &quot;Retailer&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PMC Is Retailer</label>
    <type>Checkbox</type>
</CustomField>