force-app/main/default/objects/BusinessAccount/fields/PMC_SS_AccountExternalID__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountExternalID__c</fullName>
    <externalId>true</externalId>
    <label>Account External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>