force-app/main/default/objects/BusinessAccount/fields/PMC_SS_BuyerVisa__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_BuyerVisa__c</fullName>
    <description>Brazilian Buyer Visa</description>
    <label>Buyer Visa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>