force-app/main/default/objects/BusinessAccount/fields/PMC_SS_Careof__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Careof__c</fullName>
    <description>Search Term</description>
    <label>Care of</label>
    <length>40</length>
    <type>Text</type>
</CustomField>