force-app/main/default/objects/BusinessAccount/fields/PMC_SS_CIFScript__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CIFScript__c</fullName>
    <description>States the CIF Script</description>
    <label>CIF Script</label>
    <length>255</length>
    <type>Text</type>
</CustomField>