force-app/main/default/objects/BusinessAccount/fields/PMC_SS_ClientCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ClientCode__c</fullName>
    <description>States the Client Code Number</description>
    <label>Client Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>