force-app/main/default/objects/BusinessAccount/fields/PMC_SS_ContractLanguage__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ContractLanguage__c</fullName>
    <description>States the Contract Language</description>
    <label>Contract Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>