force-app/main/default/objects/BusinessAccount/fields/PMC_SS_CounterpartyContact__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CounterpartyContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract Counterparty Contact Record</description>
    <label>Counterparty Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>