force-app/main/default/objects/BusinessAccount/fields/PMC_SS_CountyCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CountyCode__c</fullName>
    <description>States the country code. This information will be provided by the MDM team</description>
    <label>County Code (US Sold-to only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>