force-app/main/default/objects/BusinessAccount/fields/PMC_SS_CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CreditLimit__c</fullName>
    <description>This field will be use store the credit limit amount</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>