force-app/main/default/objects/BusinessAccount/fields/PMC_SS_CustomerCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerCreditAmount__c</fullName>
    <description>Amount of Credit this customer has</description>
    <label>Customer Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>