force-app/main/default/objects/BusinessAccount/fields/PMC_SS_CustomerType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerType__c</fullName>
    <description>B2C vs B2B</description>
    <label>Person or Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>