force-app/main/default/objects/BusinessAccount/fields/PMC_SS_Division__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Division__c</fullName>
    <inlineHelpText>For domestic sales, select “Domestic”. For international sales, select “Export”. For transfers between centers or warehouses, select “Intercompany”.</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>