force-app/main/default/objects/BusinessAccount/fields/PMC_SS_GLN__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_GLN__c</fullName>
    <label>GLN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>