force-app/main/default/objects/BusinessAccount/fields/PMC_SS_HierarchyApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_HierarchyApprovalStatus__c</fullName>
    <description>This field is used to track Hierarchy Approval Status</description>
    <label>Hierarchy Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Account Approved</fullName>
            </value>
            <value>
                <fullName>Account Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>