force-app/main/default/objects/BusinessAccount/fields/PMC_SS_HQ__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HQ of the Account</description>
    <label>HQ</label>
    <type>Checkbox</type>
</CustomField>