force-app/main/default/objects/BusinessAccount/fields/PMC_SS_LinkCommissionsAgent__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LinkCommissionsAgent__c</fullName>
    <description>States the commission agent for the Account</description>
    <label>Link a Commissions Agent - sold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4001629 - Buffalo-Warren Company LLC</fullName>
            </value>
            <value>
                <fullName>4001632 - Cerne Calucium Company</fullName>
            </value>
            <value>
                <fullName>4002905 - Progression Agro Trade Co</fullName>
            </value>
            <value>
                <fullName>4008572 - Terramecan S.A.</fullName>
            </value>
            <value>
                <fullName>4008593 - Serv Fertil S.C.</fullName>
            </value>
            <value>
                <fullName>4062464 - Global Value Sales SRL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>