force-app/main/default/objects/BusinessAccount/fields/PMC_SS_MDMSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MDMSyncStatus__c</fullName>
    <description>States the Sync Status with MDM system</description>
    <label>MDM Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>