force-app/main/default/objects/BusinessAccount/fields/PMC_SS_Name2__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Name2__c</fullName>
    <label>Customer Name 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>