force-app/main/default/objects/BusinessAccount/fields/PMC_SS_Name4__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Name4__c</fullName>
    <label>Customer Name 4</label>
    <length>40</length>
    <type>Text</type>
</CustomField>